# recipient_parser

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  login_domain.hpp  parser.hpp
include/recipient_parser/: addr_spec.hpp  atoms.hpp  dot_atom.hpp  email.hpp  error_handler.hpp  grammar_from_rule.hpp  normalize.hpp  parse.hpp  parser.hpp  quoted_pair.hpp  quoted_string.hpp  spirit.hpp  whitespaces.hpp
include/recipient_parser/detail/: error_handler.hpp  spirit.hpp
include/recipient_parser/from_string/: atoms.hpp  dot_atom.hpp  email.hpp  quoted_pair.hpp  quoted_string.hpp  whitespaces.hpp
include/recipient_parser/rules/: addr_spec.hpp  address.hpp  atoms.hpp  quoted_pair.hpp  quoted_string.hpp  text.hpp  whitespaces.hpp
include/recipient_parser/types/: addr_spec.hpp  address.hpp  login_domain.hpp  mailbox_group.hpp  name_addr.hpp  text.hpp
share/: CMakeLists.txt  FindRECIPIENT_PARSER.cmake  cmake_helpers.cmake  find_recipient_parser_dependencies.cmake
src/: CMakeLists.txt  boost-x3-test.cpp  parse_email.cpp  parse_email.hpp
src/from_string/: addr_spec.cpp  atoms.cpp  dot_atom.cpp  email.cpp  quoted_pair.cpp  quoted_string.cpp  whitespaces.cpp
src/from_string/detail/: grammar_from_rule.hpp  parse_template.hpp
tests/: CMakeLists.txt  addr_spec-test.cpp  address-test.cpp  atoms-test.cpp  common.hpp  debugging_test.hpp  dot_atom-test.cpp  email-test.cpp  interface-test.cpp  new-test.cpp  parser-test.cpp  quoted_pair-test.cpp  quoted_string-test.cpp  text-test.cpp  whitespaces-test.cpp
tests/from_string/: addr_spec.cpp  addr_spec.hpp  address.cpp  address.hpp  atoms.cpp  atoms.hpp  quoted_pair.cpp  quoted_pair.hpp  quoted_string.cpp  quoted_string.hpp  text.cpp  text.hpp  whitespaces.cpp  whitespaces.hpp
tests/from_string/detail/: error.hpp  grammar_from_rule.hpp  parse_template.hpp
